Version 2009112401
+ POD & Kwalitee tests
+ Mention all requirements in Makefile.PL
+ Test::NoWarnings & done_testing

Version 2009070801
+ Initial Release