@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Digest-Trivial
-version:            2009112401
+version:            2010011301
 abstract:           Trivial but fast ways to map strings to small integers
 author:
     - Abigail <abigail@abigail.be>
@@ -31,7 +31,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
